# indata

./: .gitignore  LICENCE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
indata/dataio/: load.py  transformer.py
indata/dataio/tests/: test.csv  test2.csv  test_load.py
indata/exception/: base.py
indata/plot/tests/: test.csv  test_boxplot.py  test_distribution.py  test_splom.py
indata/table/: dqt.py
indata/table/tests/: test.csv  test2.csv  test3.csv  test_dqt.py
indata/utils/: checks.py  count.py
indata/utils/tests/: test_checks.py  test_count.py
