[tool.poetry]
name = "analytics"
version = "0.1.0"
description = "A set of analytics tools which help with data exploration, data visualization and data insight"
authors = ["RapSku <raphaelskuza@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
numpy = "^1.22.3"
pytest = "^7.1.1"
plotly = "^5.7.0"
coverage = "^6.3.2"
pydata-sphinx-theme = "^0.8.1"
numpydoc = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
